--- a/g3_bank/views/movement.xml
+++ b/g3_bank/views/movement.xml
@@ -1,6 +1,6 @@
 <odoo>
     <data>
-        <!-- CAMBIADO DISTINTO -->
+         <!-- AÑADIDO COMO MEJORA-->
         <record model="ir.ui.view" id="movement_search_view">
             <field name="name">g3_bank.movement.search</field>
             <field name="model">g3_bank.movement</field>
@@ -8,7 +8,6 @@
                 <search>
                     <field name="name" string="Descripción"/>
                     <field name="account_id"/>
-
                     <filter name="filter_deposit" string="Depósitos" domain="[('name','=','deposit')]"/>
                     <filter name="filter_payment" string="Pagos" domain="[('name','=','payment')]"/>
                     <separator/>
@@ -25,16 +24,13 @@
             <field name="name">g3_bank.movement.tree</field>
             <field name="model">g3_bank.movement</field>
             <field name="arch" type="xml">
-                <tree string ="My movements" create="0">
-                <!-- <tree string ="My movements" delete="0" create="0"> -->
+                <tree string ="My movements" create="0" delete="0">
                     <field name="account_id"/>
                     <field name="timestamp"/>
-                    <field name="name"/>
+                    <!-- AÑADIDO COMO MEJORA-->
+                    <field name="name" widget="badge" decoration-danger="name == 'payment'" decoration-success="name == 'deposit'"/>
                     <field name="amount" sum="Total Movements"/>
                     <field name="balance"/>
-                    <!-- CAMBIADO DISTINTO
-                        HE CAMBIADO VALORES PARA QUE NO APAREZCAN EN EL TREE                    -->
-              
                 </tree>
             </field>
         </record>
@@ -52,8 +48,6 @@
                                 <field name="account_id" readonly="1" />
                             </group>
                             <group>
-                                <!-- CAMBIADO DISTINTO
-                        HE CAMBIADO VALORES PARA QUE NO APAREZCAN EN EL FORM                    -->
                                 <field name="timestamp" readonly="1"/>
                                 <field name="balance" readonly="1"/>
                                 <field name="currency_id" readonly="1"/>
